--- a/src/components/BlogSection/BlogSection.css
+++ b/src/components/BlogSection/BlogSection.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  scroll-margin-top: 80px;
 }
 
 .blog-section-body {
@@ -37,16 +37,16 @@
 
 .blogcard-flex {
   display: flex;
- flex-direction: column;
-  width: 100%;
-  gap:20px;
+  flex-direction: column;
   
+  gap: 20px;
 }
-.blog-cards-list{
-  min-width: 100%;
+.blog-cards-list {
+  width: 100%;
   display: flex;
-  flex-wrap: wrap ;
- gap:30px; 
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 @media screen and (max-width: 1140px) {
@@ -61,8 +61,6 @@
   .blog-section-body {
     gap: 30px;
   }
-
-  
 }
 
 @media screen and (max-width: 690px) {
