--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -10,6 +10,7 @@
   box-sizing: border-box;
   margin-top: 150px;
   margin-bottom: 100px;
+  scroll-margin-top: 80px;
 }
 
 .hero-header {
@@ -76,7 +77,7 @@
   font-size: 12px;
   color: #fff;
   text-align: center;
-  #fff-space: nowrap;
+  flex-wrap: nowrap;
 }
 
 /* Tablet view */
