--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,10 @@
   -webkit-font-smoothing: antialiased; /* For better font rendering in Webkit browsers */
   -moz-osx-font-smoothing: grayscale; /* For better font rendering in Firefox on macOS */
 }
-body{
+body {
   margin: 0;
 }
-
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 80px;
+}
